# django-stubs-issue

./: README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: checks.yaml
stubissue/: asgi.py  fake_issue.py  models.py  settings.py  urls.py  wsgi.py
stubissue/migrations/: 0001_initial.py
