[tool.poetry]
name = "django-stubs-annotate-issue"
version = "0.1.0"
description = ""
authors = ["Sid Mitra <github@sidmitra.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
django-stubs-ext = "0.5.0"

[tool.poetry.dev-dependencies]
django-stubs = {git = "https://github.com/typeddjango/django-stubs", branch = "master"}
mypy = "==0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
plugins = ["mypy_django_plugin.main"]
exclude = "[a-zA-Z_]+.migrations.|[a-zA-Z_]+.tests."

allow_redefinition = false
allow_untyped_globals = false
check_untyped_defs = false
color_output = true
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
error_summary = true
explicit_package_bases = false
follow_imports = "skip"
follow_imports_for_stubs = false
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
incremental = true
local_partial_types  = false
namespace_packages = false
no_implicit_optional = false
no_silence_site_packages = false
no_site_packages = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_none_errors = true
strict_equality = false
strict_optional = false
verbosity = 0
warn_incomplete_stub = false
warn_no_return = false
warn_redundant_casts = false
warn_return_any = false  # TODO: turn on
warn_unreachable = false
warn_unused_configs = false
warn_unused_ignores = false

[tool.django-stubs]
django_settings_module = "stubissue.settings"
